# turing_simulator

./: .clang-format  CMakeLists.txt  Makefile
src/: main  main.c  turing.c  turing.h
